--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,17 +30,23 @@ jobs:
       - name: Install Haxelib
         run: |
           haxelib setup ~/haxelib
+          haxelib setup ~/haxelib
           haxelib install hxcpp 4.2.1 > /dev/null
           haxelib install lime 7.9.0
-          haxelib install flixel 4.11.0
-          haxelib install flixel-addons 2.11.0
-          haxelib install flixel-ui
-          haxelib install hscript
+          haxelib install openfl 9.2.0
+          haxelib --never install flixel 4.11.0
+          haxelib run lime setup flixel
+          haxelib install flixel-tools
           haxelib install newgrounds
-          haxelib install openfl 9.1.0
+          haxelib install flixel-ui
+          haxelib install flixel-addons 2.11.0
+          haxelib install tjson
+          haxelib install hxjsonast
+          haxelib install hscript
           haxelib install hxCodec 2.6.1
-          haxelib git linc_luajit https://github.com/Default-name123/luashitjict.git
-          haxelib git extension-androidtools https://github.com/Default-name123/oldtools.git
+          haxelib install echo-flixel
+          haxelib git linc_luajit https://github.com/superpowers04/linc_luajit.git
+          haxelib git extension-androidtools https://github.com/Edger228/androidtools.git
           haxelib install hxcpp-debug-server
           haxelib list
       - name: Create Version Tag
@@ -53,10 +59,10 @@ jobs:
           haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_HOME
           haxelib run lime config JAVA_HOME $JAVA_HOME
           haxelib run lime config ANDROID_SETUP true
-          haxelib set flixel-addons 2.11.0
-          haxelib set flixel 4.11.0
-          haxelib set openfl 9.1.0
           haxelib set lime 7.9.0
+          haxelib set openfl 9.2.0
+          haxelib set flixel 4.11.0
+          haxelib set flixel-addons 2.11.0
           haxelib set hxCodec 2.6.1
           haxelib set hxcpp 4.2.1
         env:
